--- a/MyMediaPlayer/MyMediaPlayer/MyMediaPlayer/MyMediaPlayer.csproj
+++ b/MyMediaPlayer/MyMediaPlayer/MyMediaPlayer/MyMediaPlayer.csproj
@@ -42,6 +42,7 @@
     <Reference Include="Microsoft.VisualBasic.Compatibility" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
